<resources>
    <string name="app_name">Book Store</string>
    <string name="dummy_book_name">Corduroy</string>
    <string name="dummy_author_name">Don Freeman</string>
    <string name="dummy_publisher">Viking Press</string>
    <string name="dummy_email">abc@gmail.com</string>
    <string name="label_editor">Add a Book</string>
    <string name="empty_view_title_text">Add a Book</string>
    <string name="empty_view_subtitle_text">by exploring the menu</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert">Insert a book</string>
    <string name="action_dummy_book">Insert dummy data</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete_all_books_msg">Delete all the books?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Strings used in Editor Activity. -->
    <string name="book_name">Book</string>
    <string name="editor_book_name">Book name</string>
    <string name="editor_author_name">Author name</string>
    <string name="editor_price">Price</string>
    <string name="editor_quantity">Quantity</string>
    <string name="editor_supplier_name">Supplier name</string>
    <string name="editor_supplier_phone">Supplier Phone</string>
    <string name="editor_supplier_email">Supplier Email</string>
    <string name="editor_contact_button">Contact</string>
    <string name="list_item_sale_button">Sale</string>
</resources>
