<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_book_name" />

        <EditText
            android:id="@+id/edit_book_name"
            style="@style/EditTextTheme"
            android:hint="@string/editor_book_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_author_name" />

        <EditText
            android:id="@+id/edit_author_name"
            style="@style/EditTextTheme"
            android:hint="@string/editor_author_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_price" />

        <EditText
            android:id="@+id/edit_price"
            style="@style/EditTextTheme"
            android:hint="@string/editor_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_quantity" />

        <EditText
            android:id="@+id/edit_quantity"
            style="@style/EditTextTheme"
            android:hint="@string/editor_quantity"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="+" />

        <Button
            android:id="@+id/down_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="-" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_supplier_name" />

        <EditText
            android:id="@+id/edit_supp_name"
            style="@style/EditTextTheme"
            android:hint="@string/editor_supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_supplier_phone" />

        <EditText
            android:id="@+id/edit_supp_phone"
            style="@style/EditTextTheme"
            android:hint="@string/editor_supplier_phone"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryTheme"
            android:text="@string/editor_supplier_email" />

        <EditText
            android:id="@+id/edit_supp_email"
            style="@style/EditTextTheme"
            android:hint="@string/editor_supplier_email"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/editor_contact_button" />
</LinearLayout>